--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest        
-        python -m pip install -e .
+        python -m pip install -e ".[all]"
 
     - name: Test with pytest
       run: |
